[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydra-ext-sweeper"
version = "0.1.1"
authors = [{ name = "daizutabi", email = "daizutabi@gmail.com" }]
description = "A hydra sweeper with extended syntax for efficient parameter sweeping"
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = ["hydra-core"]

[project.urls]
Documentation = "https://daizutabi.github.io/hydra-ext-sweeper/"
Source = "https://github.com/daizutabi/hydra-ext-sweeper"
Issues = "https://github.com/daizutabi/hydra-ext-sweeper/issues"

[tool.uv]
dev-dependencies = [
  "pytest-clarity",
  "pytest-cov",
  "pytest-randomly",
  "pytest-xdist",
  "ruff",
]

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/hydra_plugins"]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--cov=hydra_ext_sweeper",
  "--cov-report=lcov:lcov.info",
]

[tool.coverage.run]
disable_warnings = ["module-not-measured"]

[tool.coverage.report]
exclude_lines = [
  "except ImportError",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "G", "PGH003", "S101", "TRY003", "EM101"]
unfixable = ["F401"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["ANN", "D", "S", "ERA", "PLR"]
